package com.vehiclerental.service.notification;

public interface NotificationService {

    void sendNotification(String recipient, String message);
}
